--- a/LoginandRegisterMVC/Views/Users/Login.cshtml
+++ b/LoginandRegisterMVC/Views/Users/Login.cshtml
@@ -5,7 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Login</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal container-fluid">
-        <h4>User</h4>
+        <h2 class="text-center text-danger">LOGIN</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })<br />
         <div class="form-group">
