--- a/LoginandRegisterMVC/Views/Users/Register.cshtml
+++ b/LoginandRegisterMVC/Views/Users/Register.cshtml
@@ -5,15 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Register</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>User</h4>
+    <h2 class="text-center">Register</h2>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -49,10 +48,8 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
-        @if (Session["Role"] != null)
+        @if (Session["Role"]!=null && Session["Role"].Equals("Admin"))
         {
-            if (Session["Role"].Equals("Admin"))
-            {
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.Role, new List<SelectListItem>
                 {
@@ -61,7 +58,6 @@
                 }, "Select Role", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
             </div>
-            }
         }
         else
         {
