--- a/LoginandRegisterMVC/Views/Shared/_Layout.cshtml
+++ b/LoginandRegisterMVC/Views/Shared/_Layout.cshtml
@@ -9,29 +9,25 @@
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("LOGINDEMO", "Index", "Users", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Users")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Users")</li>
-                    <li>@Html.ActionLink("Signup", "Register", "Users")</li>
-                    @if (Session["UserId"] != null)
-                    {
-                        <li class="navbar-right">@Html.ActionLink("Logout", "Logout", "Users")</li>
-                    }
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="navbar-brand">
+            @Html.ActionLink("LOGINDEMO", "Index", "Users", new { area = "" }, new { @class = "navbar-brand" })
         </div>
-    </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarNav">
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item">@Html.ActionLink("Home", "Index", "Users",null,new { @class="nav-link"})</li>
+                <li class="nav-item">@Html.ActionLink("Login", "Login", "Users", null, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("Signup", "Register", "Users", null, new { @class = "nav-link" })</li>
+                @if (Session["UserId"] != null)
+                {
+                    <li class="navbar-right nav-item">@Html.ActionLink("Logout", "Logout", "Users", null, new { @class = "nav-link" })</li>
+                }
+            </ul>
+        </div>
+    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
